--- a/directive/www/templates/menu0.html
+++ b/directive/www/templates/menu0.html
@@ -1,5 +1,7 @@
-<ion-view view-title="0">
+<ion-view view-title="Step 0">
     <ion-content>
-        <h1>0</h1>
+        <div hello-world></div>
+        <span hello-world></span>
+        <hello-world/>
     </ion-content>
 </ion-view>
