--- a/directive/www/templates/menu0.html
+++ b/directive/www/templates/menu0.html
@@ -3,5 +3,6 @@
         <div hello-world></div>
         <span hello-world></span>
         <hello-world/>
+        <hello-world2/>
     </ion-content>
 </ion-view>
