--- a/directive/www/templates/menu1.html
+++ b/directive/www/templates/menu1.html
@@ -1,5 +1,6 @@
-<ion-view view-title="1">
+<ion-view view-title="Link">
     <ion-content>
-        <h1>1</h1>
+        <input type="text" ng-model="name" placeholder="Enter your name">
+        <link-test/>
     </ion-content>
 </ion-view>
